# fastapi-report-export

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: report.py
app/application/use_cases/: export_report.py
app/common/utils/: text.py
app/core/: exceptions.py
app/domain/entities/: document_statistics.py  word_stat.py
app/domain/ports/: morph_normalizer.py  report_exporter.py
app/domain/services/: text_statistics_service.py
app/infrastructure/exporters/: excel_report_exporter.py
app/infrastructure/morphology/: pymorphy3_normalizer.py
tests/integration/: test_report_endpoint.py
tests/unit/application/: test_export_report_use_case.py
tests/unit/common/utils/: test_text.py
tests/unit/domain/entities/: test_document_statistics.py  test_word_stat.py
tests/unit/domain/services/: test_text_statistics_service.py
tests/unit/infrastructure/exporters/: test_excel_report_exporter.py
tests/unit/infrastructure/morphology/: test_pymorhy3_normalizer.py
