[project]
name = "fastapi-report-export"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pymorphy3>=2.0.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"